Refactor(PostLike): SSE 이용한 알림 기능 추가로 인한 메서드 변경